--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -8,11 +8,24 @@
   <url>http://maven.apache.org</url>
 
   <dependencies>
+
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
       <version>1.17.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambots-longpolling</artifactId>
+      <version>7.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambots-client</artifactId>
+      <version>7.2.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
